@@ -4,6 +4,7 @@ using System.IO;
 using System.Linq;
 using System.Text.RegularExpressions;
 using Nustache.Core;
+using PatternLab.Core.Providers;
 
 namespace PatternLab.Core.Engines.Mustache
 {
@@ -37,10 +38,30 @@ namespace PatternLab.Core.Engines.Mustache
                 (current, parameter) =>
                     current.Replace(parameter.Key, parameter.Value.ToString()));
 
-            // Replace any Mustache variables with the values in the pattern parameters
-            template = _parameters.Aggregate(template,
-                (current, parameter) =>
-                    Regex.Replace(current, @"{{\s?" + parameter.Key + @"\s?}}", parameter.Value.ToString()));
+            // Replace any Mustache variables with the values in the Pattern Parameters
+            foreach (var parameter in _parameters)
+            {
+                var value = parameter.Value.ToString();
+                var key = parameter.Key;
+
+                if (value.Equals(bool.TrueString, StringComparison.InvariantCultureIgnoreCase))
+                {
+                    // If 'true' strip out {{# }} sections and set {{^ }} sections to empty
+                    template = Regex.Replace(template, @"{{#\s?" + key + @"\s?}}(.*?)?{{/\s?" + key + @"\s?}}", @"$1", RegexOptions.Singleline);
+                    template = Regex.Replace(template, @"{{\^\s?" + key + @"\s?}}(.*?)?{{/\s?" + key + @"\s?}}", string.Empty, RegexOptions.Singleline);
+                }
+                else if (value.Equals(bool.FalseString, StringComparison.InvariantCultureIgnoreCase))
+                {
+                    // If 'true' strip out {{^ }} sections and set {{# }} sections to empty
+                    template = Regex.Replace(template, @"{{\^\s?" + key + @"\s?}}(.*?)?{{/\s?" + key + @"\s?}}", @"$1", RegexOptions.Singleline);
+                    template = Regex.Replace(template, @"{{#\s?" + key + @"\s?}}(.*?)?{{/\s?" + key + @"\s?}}", string.Empty, RegexOptions.Singleline);
+                }
+                else
+                {
+                    // Replace variables with value
+                    template = Regex.Replace(template, @"{{\s?" + key + @"\s?}}", value.Replace(PatternProvider.IdentifierParameterString.ToString(), string.Empty));
+                }
+            }
 
             // Scan and parse the template with the Pattern Lab specific instance of Nustache classes
             var scanner = new MustacheScanner();
